--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,4 +7,4 @@ $mobile-header-height: 63.11px;
 $mobile-footer-height: 124px;
 
 $extended-sidebar-width: 457px;
-$minimized-sidebar-width: 36px;
+$minimized-sidebar-width: 42px;
